--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -80,7 +80,7 @@
                             <div class="btn-part btn-recommend-no">
                                 <img class="btn-img" src="/client/images/symbol_recommend_no.png" alt="Not Recommended">
                             </div>
-                            <span class="stat-label">Not Recommend</span>
+                            <span class="stat-label">Do Not Recommend</span>
                             <span class="stat-value" id="value-recommended-no">0</span>
                         </div>
                         <div class="stat-item">
@@ -106,19 +106,19 @@
         </div>
         <div class="element-border" id="recommendation-border">
             <div class="element-container">
-                <label class="title-label">Recommends</label>
+                <label class="title-label">Recommend</label>
                 <div id="recommended-cocktails" class="cocktails-container">
                     <!-- Recommended cocktail items will be dynamically appended here -->
                 </div>
             </div>
             <div class="element-container">
-                <label class="title-label">Does Not Recommend</label>
+                <label class="title-label">Do Not Recommend</label>
                 <div id="not-recommended-cocktails" class="cocktails-container">
                     <!-- Not recommended cocktail items will be dynamically appended here -->
                 </div>
             </div>
             <div class="element-container">
-                <label class="title-label">Plans To Taste</label>
+                <label class="title-label">Plan To Taste</label>
                 <div id="planned-cocktails" class="cocktails-container">
                     <!-- Planned cocktail items will be dynamically appended here -->
                 </div>
