--- a/client/pages/recipe/recipe.html
+++ b/client/pages/recipe/recipe.html
@@ -48,19 +48,19 @@
                     </div>
                     <div class="btn-inner-container" id="display-stats">
                         <div class="btn-item">
-                            <div class="btn-part btn-recommend">
+                            <div class="btn-part-nr btn-recommend">
                                 <img class="btn-img" src="/client/images/symbol_recommend.png" alt="Recommend Button">
                             </div>
                             <span class="stat-value" id="value-recommended">0</span>
                         </div>
                         <div class="btn-item">
-                            <div class="btn-part btn-recommend-no">
+                            <div class="btn-part-nr btn-recommend-no">
                                 <img class="btn-img" src="/client/images/symbol_recommend_no.png" alt="Not Recommend Button">
                             </div>
                             <span class="stat-value" id="value-recommended-no">0</span>
                         </div>
                         <div class="btn-item">
-                            <div class="btn-part btn-pin">
+                            <div class="btn-part-nr btn-pin">
                                 <img class="btn-img" src="/client/images/symbol_pin.png" alt="Pin Button">
                             </div>
                             <span class="stat-value" id="value-planned">0</span>
