--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -54,12 +54,10 @@
     </aside>
     <main>
         <div class="element-border" id="stats-border">
-            <div class="element-container" id="fav-cocktail">
+            <div class="element-container">
                 <label class="title-label">FAVOURITE</label>
-                <div class="cocktail-container">
-                    <label class="cocktail-title-label" id="name"></label>
-                    <label class="cocktail-rating-label" id="rating"></label>
-                    <img class="cocktail-img" id="img" src="/client/images/placeholder.png" alt="Cocktail Thumbnail">
+                <div class="cocktails-container" id="fav-cocktail-container">
+                    <img class="cocktail-img" id="placeholder-fav" src="/client/images/placeholder.png" alt="Cocktail Thumbnail">
                 </div>
             </div>
             <div class="element-container" id="stats">
