--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -70,7 +70,7 @@
             <span class="main-label slide-value"></span>
             <div class="element-inner-container rating-container">
                 <label class="rating-bar" for="slide">
-                    <input id="slide" type="range" min="0.0" max="5.0" step="0.1">
+                    <input id="slide" type="range" min="0.0" max="5.0" step="0.1" value="0">
                 </label>
             </div>
         </div>
