profile page: started working on editing of user information 🫠

--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -27,13 +27,23 @@
                 <img class="profile-picture" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
             </div>
             <div class="element-container">
-                <label class="main-label" for="username">Username</label>
+                <div class="subheader">
+                    <label class="main-label" for="username">Username</label>
+                    <div class="btn-part btn-edit" id="btn-edit-username" data-tag-set="1">
+                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
+                    </div>
+                </div>
                 <div class="element-inner-container">
                     <label class="element-input tags" id="username" name="username"></label>
                 </div>
             </div>
             <div class="element-container">
-                <label class="main-label" for="username">Email</label>
+                <div class="subheader">
+                    <label class="main-label" for="username">Email</label>
+                    <div class="btn-part btn-edit" id="btn-edit-email" data-tag-set="1">
+                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
+                    </div>
+                </div>
                 <div class="element-inner-container">
                     <label class="element-input tags scrollbox" id="email-tag">
                         <div class="tags-content" id="email"></div>
@@ -41,9 +51,14 @@
                 </div>
             </div>
             <div class="element-container">
-                <label class="main-label" for="password">Password</label>
+                <div class="subheader">
+                    <label class="main-label" for="password">Password</label>
+                    <div class="btn-part btn-edit" id="btn-edit-password" data-tag-set="1">
+                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
+                    </div>
+                </div>
                 <div class="element-inner-container">
-                    <label class="element-input tags" id="password"></label>
+                    <label class="element-input tags" type="password" id="password"></label>
                 </div>
             </div>
             <div class="element-container btn-container">
