profile page: improved editing of user information 🫠

--- a/client/pages/profile/profile.html
+++ b/client/pages/profile/profile.html
@@ -45,9 +45,7 @@
                     </div>
                 </div>
                 <div class="element-inner-container">
-                    <label class="element-input tags scrollbox" id="email-tag">
-                        <div class="tags-content" id="email"></div>
-                    </label>
+                    <label class="element-input tags" id="email" name="email"></label>
                 </div>
             </div>
             <div class="element-container">
@@ -58,7 +56,7 @@
                     </div>
                 </div>
                 <div class="element-inner-container">
-                    <label class="element-input tags" type="password" id="password"></label>
+                    <label class="element-input tags" id="password"></label>
                 </div>
             </div>
             <div class="element-container btn-container">
