--- a/client/pages/home/home.html
+++ b/client/pages/home/home.html
@@ -34,56 +34,55 @@
     </header>
     <aside id="sidebar">
         <div class="element-border">
-            <div class="element-container">
-                <div class="element-inner-container tags">
-                    <span class="tag" data-tag-set="1">alcoholic</span>
-                    <span class="tag" data-tag-set="1">non alcoholic</span>
+            <div id="filter-container" class="element-container">
+                <label class="title-label">FILTER</label>
+                <div class="element-container">
+                    <div class="element-inner-container tags">
+                        <span class="tag" data-tag-set="1">alcoholic</span>
+                        <span class="tag" data-tag-set="1">non alcoholic</span>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container">
-                <label class="main-label">Categories</label>
-                <div class="element-inner-container tags">
-                    <span class="tag" data-tag-set="0">shot</span>
-                    <span class="tag" data-tag-set="0">cocoa</span>
-                    <span class="tag" data-tag-set="0">coffee / tea</span>
-                    <span class="tag" data-tag-set="0">homemade liqueur</span>
-                    <span class="tag" data-tag-set="0">shake</span>
-                    <span class="tag" data-tag-set="0">ordinary drink</span>
-                    <span class="tag" data-tag-set="0">soft drink</span>
-                    <span class="tag" data-tag-set="0">punch / party drink</span>
-                    <span class="tag" data-tag-set="0">beer</span>
-                    <span class="tag" data-tag-set="0">cocktail</span>
-                    <span class="tag" data-tag-set="0">other / unknown</span>
-
+                <div class="element-container">
+                    <label class="main-label">Categories</label>
+                    <div class="element-inner-container tags">
+                        <span class="tag" data-tag-set="0">shot</span>
+                        <span class="tag" data-tag-set="0">cocoa</span>
+                        <span class="tag" data-tag-set="0">coffee / tea</span>
+                        <span class="tag" data-tag-set="0">homemade liqueur</span>
+                        <span class="tag" data-tag-set="0">shake</span>
+                        <span class="tag" data-tag-set="0">ordinary drink</span>
+                        <span class="tag" data-tag-set="0">soft drink</span>
+                        <span class="tag" data-tag-set="0">punch / party drink</span>
+                        <span class="tag" data-tag-set="0">beer</span>
+                        <span class="tag" data-tag-set="0">cocktail</span>
+                        <span class="tag" data-tag-set="0">other / unknown</span>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container">
-                <label class="main-label">Ingredients</label>
-                <label class="search-bar search-ingredients" for="search-ingredients">
-                    <input id="search-ingredients">
-                </label>
-                <div class="element-inner-container tags ingredients">
-
-                </div>
-            </div>
-            <div class="element-container">
-                <span class="main-label slide-value"></span>
-                <div class="element-inner-container rating-container">
-                    <label class="rating-bar" for="slide">
-                        <input id="slide" type="range" min="0.0" max="5.0" step="0.1" value="0">
+                <div class="element-container">
+                    <label class="main-label">Ingredients</label>
+                    <label class="search-bar search-ingredients" for="search-ingredients">
+                        <input id="search-ingredients">
                     </label>
+                    <div class="element-inner-container tags ingredients">
+
+                    </div>
                 </div>
-            </div>
-            <div class="element-container">
-                <label class="main-label">Sort by</label>
-                <div class="element-inner-container tags">
-                    <span class="tag" data-tag-set="2">asc</span>
-                    <span class="tag" data-tag-set="2">desc</span>
-                    <span class="tag" data-tag-set="2">top rated</span>
+                <div class="element-container">
+                    <span class="main-label slide-value"></span>
+                    <div class="element-inner-container rating-container">
+                        <label class="rating-bar" for="slide">
+                            <input id="slide" type="range" min="0.0" max="5.0" step="0.1" value="0">
+                        </label>
+                    </div>
                 </div>
-            </div>
-            <div class="element-container btn-container" id="filter-button">
-                <button class="btn-bold-orange">FILTER</button>
+                <div class="element-container">
+                    <label class="main-label">Sort by</label>
+                    <div class="element-inner-container tags">
+                        <span class="tag" data-tag-set="2">asc</span>
+                        <span class="tag" data-tag-set="2">desc</span>
+                        <span class="tag" data-tag-set="2">top rated</span>
+                    </div>
+                </div>
             </div>
         </div>
     </aside>
