--- a/client/client_pages/home/home.html
+++ b/client/client_pages/home/home.html
@@ -6,9 +6,9 @@
     <title>Home - LiquorLoom</title>
     <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
-    <link rel="stylesheet" href="/client/pages/home/home.css">
+    <link rel="stylesheet" href="/client/client_pages/home/home.css">
     <script type="module" src="/client/base.js"></script>
-    <script type="module" src="/client/pages/home/home.js"></script>
+    <script type="module" src="/client/client_pages/home/home.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
