--- a/client/pages/authentication/signup.html
+++ b/client/pages/authentication/signup.html
@@ -53,6 +53,9 @@
                 </div>
             </form>
         </div>
+        <div class="element-cat hidden">
+            <div id="error-image-container"></div>
+        </div>
     </main>
     <script>
         document.getElementById('logo-container').addEventListener('click', function() {
