responsive design: only missing profile page now 💀

--- a/client/client_pages/recipe/recipe.html
+++ b/client/client_pages/recipe/recipe.html
@@ -27,7 +27,7 @@
             <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
         </div>
     </header>
-    <main class="normal-main" id="main">
+    <main>
         <div class="element-border" id="recipe-container">
             <div class="cocktail-container">
                 <label class="cocktail-title-label" id="name"></label>
@@ -108,9 +108,6 @@
                 <button class="btn-bold-orange" id="save-btn">SAVE RATING</button>
                 <button class="btn-normal-grey" id="delete-btn">DELETE</button>
             </div>
-        </div>
-        <div class="element-border" id="comments-container">
-            <div class="title-label"><label>COMMENTS</label></div>
         </div>
     </main>
 </body>
