added quotableAPI to recipe page 🤓

--- a/client/client_pages/recipe/recipe.html
+++ b/client/client_pages/recipe/recipe.html
@@ -109,6 +109,11 @@
                 <button class="btn-normal-grey" id="delete-btn">DELETE</button>
             </div>
         </div>
+        <div class="element-border" id="quote-container">
+            <div class="element-inner-container">
+                <label class="element-input tags" id="quote">"Loading quote..."</label>
+            </div>
+        </div>
     </main>
 </body>
 </html>
