responsive design: almost done 💀

--- a/client/client_pages/authentication/signup.html
+++ b/client/client_pages/authentication/signup.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="element-container btn-container">
-                    <button class="btn-bold-orange" type="submit">CREATE ACCOUNT</button>
+                    <button class="btn-bold-orange" type="submit">SIGN UP</button>
                     <button class="btn-normal-grey" id="login-btn" type="button">LOGIN</button>
                 </div>
             </form>
