--- a/client/client_pages/home/home.html
+++ b/client/client_pages/home/home.html
@@ -29,7 +29,7 @@
         <div class="profile-container">
             <button class="btn-normal-grey" id="login-btn">LOGIN</button>
             <button class="btn-normal-grey hidden" id="logout-btn">LOGOUT</button>
-            <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
+            <button class="btn-normal-grey hidden" id="profile-btn">PROFILE</button>
         </div>
     </header>
     <aside id="sidebar">
