--- a/client/client_pages/profile/profile.html
+++ b/client/client_pages/profile/profile.html
@@ -23,53 +23,9 @@
             <img class="logo-small" src="/client/images/logo_small_orange.png" alt="LiquorLoom Logo Small">
         </div>
     </header>
-    <aside id="sidebar">
-        <div class="element-border" id="profile-border">
-            <div class="profile-picture-container">
-                <img class="profile-picture" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
-            </div>
-            <div class="element-container">
-                <div class="subheader">
-                    <label class="main-label" for="username">Username</label>
-                    <div class="btn-part btn-edit" id="btn-edit-username" data-tag-set="1">
-                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
-                    </div>
-                </div>
-                <div class="element-inner-container">
-                    <label class="element-input tags" id="username"></label>
-                </div>
-            </div>
-            <div class="element-container">
-                <div class="subheader">
-                    <label class="main-label" for="username">Email</label>
-                    <div class="btn-part btn-edit" id="btn-edit-email" data-tag-set="1">
-                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
-                    </div>
-                </div>
-                <div class="element-inner-container">
-                    <label class="element-input tags" id="email"></label>
-                </div>
-            </div>
-            <div class="element-container">
-                <div class="subheader">
-                    <label class="main-label" for="password">Password</label>
-                    <div class="btn-part btn-edit" id="btn-edit-password" data-tag-set="1">
-                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
-                    </div>
-                </div>
-                <div class="element-inner-container">
-                    <label class="element-input tags" id="password"></label>
-                </div>
-            </div>
-            <div class="element-container btn-container">
-                <button class="btn-normal-grey" id="logout-btn">LOGOUT</button>
-                <button class="btn-normal-grey" id="delete-btn">DELETE</button>
-            </div>
-        </div>
-    </aside>
     <main>
         <div class="element-border" id="stats-border">
-            <div class="element-container">
+            <div class="element-container" id="fav-cocktail">
                 <label class="title-label">FAVOURITE</label>
                 <div class="cocktails-container" id="fav-cocktail-container">
                     <img class="cocktail-img" id="placeholder-fav" src="/client/images/placeholder.png" alt="Cocktail Thumbnail">
@@ -115,6 +71,45 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="element-border" id="user-info">
+            <div class="element-container">
+                <div class="subheader">
+                    <label class="main-label" for="username">Username</label>
+                    <div class="btn-part btn-edit" id="btn-edit-username" data-tag-set="1">
+                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
+                    </div>
+                </div>
+                <div class="element-inner-container">
+                    <label class="element-input tags" id="username"></label>
+                </div>
+            </div>
+            <div class="element-container">
+                <div class="subheader">
+                    <label class="main-label" for="username">Email</label>
+                    <div class="btn-part btn-edit" id="btn-edit-email" data-tag-set="1">
+                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
+                    </div>
+                </div>
+                <div class="element-inner-container">
+                    <label class="element-input tags" id="email"></label>
+                </div>
+            </div>
+            <div class="element-container">
+                <div class="subheader">
+                    <label class="main-label" for="password">Password</label>
+                    <div class="btn-part btn-edit" id="btn-edit-password" data-tag-set="1">
+                        <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
+                    </div>
+                </div>
+                <div class="element-inner-container">
+                    <label class="element-input tags" id="password"></label>
+                </div>
+            </div>
+            <div class="element-container btn-container">
+                <button class="btn-normal-grey" id="logout-btn">LOGOUT</button>
+                <button class="btn-normal-grey" id="delete-btn">DELETE</button>
             </div>
         </div>
         <div class="element-border" id="recommendation-border">
