responsive design: done + fixed 3.api 💀

--- a/client/client_pages/recipe/recipe.html
+++ b/client/client_pages/recipe/recipe.html
@@ -24,7 +24,7 @@
         <div class="profile-container">
             <button class="btn-normal-grey" id="login-btn">LOGIN</button>
             <button class="btn-normal-grey hidden" id="logout-btn">LOGOUT</button>
-            <img class="header-profile-picture" id="profile-pic" src="/client/images/profile_picture_empty.png" alt="Profile Picture">
+            <button class="btn-normal-grey hidden" id="profile-btn">PROFILE</button>
         </div>
     </header>
     <main>
@@ -109,7 +109,7 @@
                 <button class="btn-normal-grey" id="delete-btn">DELETE</button>
             </div>
         </div>
-        <div class="element-border" id="quote-container">
+        <div class="element-border hidden" id="quote-container">
             <div class="element-inner-container">
                 <label class="element-input tags" id="quote">"Loading quote..."</label>
             </div>
