2nd FE component: fixing stuff 💀

--- a/client/client_pages/profile/profile.html
+++ b/client/client_pages/profile/profile.html
@@ -76,7 +76,7 @@
         <div class="element-border" id="user-info">
             <div class="element-container">
                 <div class="subheader">
-                    <label class="main-label" for="username">Username</label>
+                    <label class="main-label">Username</label>
                     <div class="btn-part btn-edit" id="btn-edit-username" data-tag-set="1">
                         <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
                     </div>
@@ -87,7 +87,7 @@
             </div>
             <div class="element-container">
                 <div class="subheader">
-                    <label class="main-label" for="username">Email</label>
+                    <label class="main-label">Email</label>
                     <div class="btn-part btn-edit" id="btn-edit-email" data-tag-set="1">
                         <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
                     </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="element-container">
                 <div class="subheader">
-                    <label class="main-label" for="password">Password</label>
+                    <label class="main-label">Password</label>
                     <div class="btn-part btn-edit" id="btn-edit-password" data-tag-set="1">
                         <img class="btn-img" src="/client/images/symbol_edit.png" alt="Edit Button">
                     </div>
