code refinement of editor.js, login.js, signup.js, profile.js 🥸

--- a/client/client_pages/authentication/signup.html
+++ b/client/client_pages/authentication/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Signup - LiquorLoom</title>
     <link rel="icon" type="image/png" href="/client/images/logo_small_black.png">
     <link rel="stylesheet" href="/client/base.css">
     <link rel="stylesheet" href="/client/client_pages/authentication/authentication.css">
@@ -58,13 +58,5 @@
             <div id="error-image-container"></div>
         </div>
     </main>
-    <script>
-        document.getElementById('logo-container').addEventListener('click', function() {
-            window.location.href = '/home';
-        });
-        document.getElementById('login-btn').addEventListener('click', function() {
-            window.location.href = '/login';
-        });
-    </script>
 </body>
 </html>
