code refinement of recipe.js 🥸

--- a/client/client_pages/profile/profile.html
+++ b/client/client_pages/profile/profile.html
@@ -46,7 +46,7 @@
                             <span class="stat-value" id="value-recommended">0</span>
                         </div>
                         <div class="stat-item">
-                            <div class="btn-part btn-recommend-no">
+                            <div class="btn-part btn-not_recommend">
                                 <img class="btn-img" src="/client/images/symbol_recommend_no.png" alt="Not Recommended">
                             </div>
                             <span class="stat-label">Do Not Recommend</span>
