--- a/client/client_pages/recipe/recipe.html
+++ b/client/client_pages/recipe/recipe.html
@@ -51,19 +51,19 @@
                             <div class="btn-part-nr btn-recommend">
                                 <img class="btn-img" src="/client/images/symbol_recommend.png" alt="Recommend Button">
                             </div>
-                            <span class="stat-value" id="value-recommended">0</span>
+                            <span class="stat-value" id="value-recommend">0</span>
                         </div>
                         <div class="btn-item">
-                            <div class="btn-part-nr btn-recommend-no">
+                            <div class="btn-part-nr btn-not_recommend">
                                 <img class="btn-img" src="/client/images/symbol_recommend_no.png" alt="Not Recommend Button">
                             </div>
-                            <span class="stat-value" id="value-recommended-no">0</span>
+                            <span class="stat-value" id="value-not_recommend">0</span>
                         </div>
                         <div class="btn-item">
                             <div class="btn-part-nr btn-pin">
                                 <img class="btn-img" src="/client/images/symbol_pin.png" alt="Pin Button">
                             </div>
-                            <span class="stat-value" id="value-planned">0</span>
+                            <span class="stat-value" id="value-pin">0</span>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                 <button class="btn-part btn-grey" id="btn-recommend">
                     <img class="btn-img" data-tag-set="1" src="/client/images/symbol_recommend_grey.png" alt="Recommend Button">
                 </button>
-                <button class="btn-part btn-grey" id="btn-recommend-no">
+                <button class="btn-part btn-grey" id="btn-not_recommend">
                     <img class="btn-img" data-tag-set="1" src="/client/images/symbol_recommend_no_grey.png" alt="Not Recommend Button">
                 </button>
                 <button class="btn-part btn-grey" id="btn-pin">
