--- a/client/client_pages/authentication/login.html
+++ b/client/client_pages/authentication/login.html
@@ -14,7 +14,7 @@
     <script type="module" src="/client/client_pages/authentication/login.js"></script>
 </head>
 <body>
-    <span class="alert error-alert hidden" id="alert-error"></span>
+    <div class="alert error-alert hidden" id="alert-error"></div>
     <div class="alert success-alert hidden" id="alert-success"></div>
     <header>
         <div class="logo-container" id="logo-container">
